--- a/.github/workflows/dev-bins-build.yml
+++ b/.github/workflows/dev-bins-build.yml
@@ -1,4 +1,4 @@
-name: Oxen Electron Wallet With Dev Binaries
+name: Lozzax Electron Wallet With Dev Binaries
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Download oxend binaries
+      - name: Download lozzaxd binaries
         run: ./download-dev-bins.sh
         env:
           OS: ${{ runner.os }}
@@ -48,10 +48,10 @@ jobs:
         shell: bash
         working-directory: ./downloads
 
-      - name: Move oxend binaries
+      - name: Move lozzaxd binaries
         run: |
-          find ./downloads -type f -name "oxend*" -exec cp '{}' ./bin \;
-          find ./downloads -type f -name "oxen-wallet-rpc*" -exec cp '{}' ./bin \;
+          find ./downloads -type f -name "lozzaxd*" -exec cp '{}' ./bin \;
+          find ./downloads -type f -name "lozzax-wallet-rpc*" -exec cp '{}' ./bin \;
         shell: bash
 
       - name: Verify binaries
